<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_label">Banana!</string>
    <string name="forgot_password">I forgot my password?</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="login_background">login_background</string>
    <string name="create_account">Create an account</string>
    <string name="viejito_compu_content_description">viejito compu background image</string>
    <string name="what_song_logo">What Song Logo</string>
    <string name="name_shortcut">Name your shortcut</string>
    <string name="minha_conta_logo">minha conta logo</string>
    <string name="minha_conta_background">minha conta background</string>
    <string name="minha_conta_description">Acceda al sistema y visualize sus datos</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="email_address">Email address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_in">Sign in</string>
    <string name="create_and_signin">Create account and sign in</string>
    <string name="user_profile_picture">user_profile_picture</string>

    <string-array name="music_providers">
        <item>Itunes</item>
        <item>Spotify</item>
        <item>Pandora</item>
    </string-array>

</resources>