<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:src="@drawable/viejito_compu"
        android:scaleType="centerCrop"
        android:contentDescription="@string/viejito_compu_content_description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_blur"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:src="@drawable/friska"
            android:contentDescription="@string/login_background"
            />

        <EditText
            android:id="@+id/etxt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"

            android:paddingRight="20dp"
            android:paddingLeft="60dp"

            android:textColorHint="#FFFFFF"
            android:hint="@string/username"
            android:textColor="#FFFFFF"
            />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:paddingRight="20dp"
            android:paddingLeft="60dp"


            android:textColorHint="#FFFFFF"
            android:hint="@string/password"
            android:textColor="#FFFFFF"
            />


        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"

            android:paddingTop="@dimen/forgot_password_vertical_padding"
            android:paddingBottom="@dimen/forgot_password_vertical_padding"

            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:text="@string/forgot_password"
            />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/red_sign_in"

            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/sign_in"
            />
        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff18aa18"
            android:gravity="center"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"

            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/create_account"

            />
    </LinearLayout>

</FrameLayout>