<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_vertical_margin">
                    <EditText
                        style="@style/FriskaRegistrationEditText"
                        android:id="@+id/etxt_first_name"
                        android:hint="@string/first_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/activity_vertical_margin">
                    <EditText
                        style="@style/FriskaRegistrationEditText"
                        android:id="@+id/etxt_last_name"
                        android:hint="@string/last_name" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">
                <EditText
                    style="@style/FriskaRegistrationEditText"
                    android:id="@+id/etxt_username"
                    android:hint="@string/username"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">
                <EditText
                    style="@style/FriskaRegistrationEditText"
                    android:id="@+id/etxt_password1"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout">

                <EditText
                    style="@style/FriskaRegistrationEditText"
                    android:id="@+id/etxt_password2"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">
                <EditText
                    style="@style/FriskaRegistrationEditText"
                    android:id="@+id/etxt_phone_number"
                    android:hint="@string/txt_phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">
                <EditText
                    style="@style/FriskaRegistrationEditText"
                    android:id="@+id/etxt_email"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create_sign_in"
        style="@style/GreenLargeButton"
        android:text="@string/create_and_signin"/>


</LinearLayout>