<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|center"
        android:layout_weight="0.3">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9E9E9E" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_profile_picture"
            android:scaleType="centerInside"
            android:src="@drawable/what_song_logo" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etxt_up_first_name"
                        style="@style/FriskaRegistrationEditText"
                        android:hint="@string/first_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etxt_up_last_name"
                        style="@style/FriskaRegistrationEditText"
                        android:hint="@string/last_name" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">

                <EditText
                    android:id="@+id/etxt_up_username"
                    style="@style/FriskaRegistrationEditText"
                    android:hint="@string/username"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">

                <EditText
                    android:id="@+id/etxt_up_phone"
                    style="@style/FriskaRegistrationEditText"
                    android:hint="@string/txt_phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/FriskaRegistrationTextInputLayout.Padding">

                <EditText
                    android:id="@+id/etxt_up_email"
                    style="@style/FriskaRegistrationEditText"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>